# shop

./: pyproject.toml
.github/workflows/: main.yml
shop_project/: .prospector.yaml  Dockerfile  conftest.py  docker-compose.yml  requirements.txt
shop_project/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
shop_project/catalog/management/commands/: bot.py
shop_project/catalog/tests/: test_client_views.py
shop_project/catalog/tests/fixtures/: categories_fixture.json  discount_fixture.json  producer_fixtures.json  products_fixtures.json
shop_project/shop_project/: celery.py  settings.py  urls.py
shop_project/users/: admin.py  models.py  urls.py  views.py
shop_project/users/tests/: test_users.py
