[tool.poetry]
name = "shop-inet"
version = "0.1.0"
description = ""
authors = ["1"]
readme = "README.md"
packages = [{include = "shop_inet"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
