[tool.poetry]
name = "shop-inet"
version = "0.1.0"
description = ""
authors = ["1"]
readme = "README.md"
packages = [{include = "shop_inet"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
django-environ = "^0.10.0"
djoser = "^2.1.0"
pytest-django = "^4.5.2"
prospector = "^1.9.0"
celery = "^5.2.7"
redis = "^4.5.4"
django-celery-beat = "^2.5.0"
django-rest-swagger = "2.2.0"
drf-yasg = "1.21.4"
drf-yasg2 = "1.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
